# rustaria

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  flake.nix  projectMap.js
extension/: README.md  background.ts  content.ts  manifest.json  package.json  popup.html  tsconfig.json
home-manager/: rustaria.nix
src/: lib.rs  main.rs
src/aria2/: daemon.rs  events.rs  methods.rs  mod.rs  rpc.rs  session.rs  supervisor.rs  types.rs  ws.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: mod.rs  schema.rs
src/db/: mod.rs  queries.rs  state.rs
src/integration/: clipboard.rs  messaging.rs  mod.rs  native_host.rs  patterns.rs  sniffer.rs
src/postprocess/: extractor.rs  ffmpeg.rs  hooks.rs  mod.rs  organizer.rs  rules.rs
src/queue/: job.rs  mod.rs  state_machine.rs
src/scheduler/: mod.rs  policy.rs
src/ui/: mod.rs  notify.rs
src/ui/tui/: mod.rs
src/ui/tui/views/: mod.rs
src/ui/tui/widgets/: mod.rs
